# sck-core-runner

./: .gitignore  .lambda  README.md  pyproject.toml  pytest.ini  requirements.txt
core_runner/: __init__.py  handler.py
tests/: conftest.py  test.py  test_runner.py
