[build-system]
requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0",]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "sck-core-runner"
version = "0.0.8"
description = "Core Automation Runner Lambda function"
authors = [ "James Barwick <jbarwick@me.com>",]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["sck", "core", "aws", "cloud", "automation"]

[[tool.poetry.packages]]
include = "core_runner"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = ">=1.39.9"
botocore = ">=1.39.9"
sck-core-framework = "^0.0.8"
sck-core-db = "^0.0.8"
sck-core-execute = "^0.0.8"
sck-core-report = "^0.0.8"

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["core_runner/__init__.py"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
cfn-lint = "^1.22.3"
black = "^24.10.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^6.0.0"
